--- a/SkedPortal/Views/Home/Contact.cshtml
+++ b/SkedPortal/Views/Home/Contact.cshtml
@@ -2,16 +2,16 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    1900 Sans Souci Blvd<br />
+    North Miami, FL, 33181<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    786.227.4197
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Linkdln:</strong>   <a href="https://www.linkedin.com/in/humberto-lima-5714a7113">Support@example.com</a><br />
+    <strong>GitHub:</strong> <a href="https://github.com/humbertolima">Marketing@example.com</a>
 </address>
