--- a/SkedPortal/Views/Shared/_Layout.cshtml
+++ b/SkedPortal/Views/Shared/_Layout.cshtml
@@ -26,10 +26,11 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Dashboard", "Dashboard", "Employees")</li>
-                    <li>@Html.ActionLink("Employees", "Index", "Employees")</li>
+                    <li>@Html.ActionLink("Dashboard", "Dashboard", "Users")</li>
+                    <li>@Html.ActionLink("Employees", "Index", "Users")</li>
                     <li>@Html.ActionLink("Flights", "Index", "Flights")</li>
                     <li>@Html.ActionLink("Active Flights", "Active_Flights", "Flights")</li>
+                    <li>@Html.ActionLink("Completed Flights", "Completed_Flights", "Flights")</li>
                     <li>@Html.ActionLink("Login", "Login", "Employees")</li>
                     <li>@Html.ActionLink("Logout", "Logout", "Employees")</li>
                 </ul>
