--- a/SkedPortal/Views/Users/Index.cshtml
+++ b/SkedPortal/Views/Users/Index.cshtml
@@ -1,51 +1,48 @@
 ﻿@model IEnumerable<SkedPortal.Models.User>
 
+@{
+    ViewBag.Title = "Employees";
+}
+
+<h2>Index</h2>
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.photo)
+            First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.first_name)
+            Last Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.last_name)
+            Email
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.email)
+            Username
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.username)
+            Password
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.hash)
+            Role
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.permissions)
+            Total Hours
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.total_hours)
+            Current Hours
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.current_hours)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.rest_start)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.availability)
+            Availability
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.photo)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.first_name)
         </td>
@@ -69,9 +66,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.current_hours)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.rest_start)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.availability)
