--- a/SkedPortal/Views/Users/Delete.cshtml
+++ b/SkedPortal/Views/Users/Delete.cshtml
@@ -12,15 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.photo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.photo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.first_name)
+            First Name
         </dt>
 
         <dd>
@@ -28,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.last_name)
+            Last Name
         </dt>
 
         <dd>
@@ -36,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            Email
         </dt>
 
         <dd>
@@ -44,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.username)
+            Username
         </dt>
 
         <dd>
@@ -52,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hash)
+            Password
         </dt>
 
         <dd>
@@ -60,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.permissions)
+            Role
         </dt>
 
         <dd>
@@ -68,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.total_hours)
+            Total Hours
         </dt>
 
         <dd>
@@ -76,7 +68,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.current_hours)
+            Current Hours
         </dt>
 
         <dd>
@@ -84,7 +76,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.rest_start)
+            Rest Start
         </dt>
 
         <dd>
@@ -92,13 +84,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.availability)
+            Availability
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.availability)
         </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
