--- a/SkedPortal/Views/Users/Details.cshtml
+++ b/SkedPortal/Views/Users/Details.cshtml
@@ -10,16 +10,9 @@
     <h4>User</h4>
     <hr />
     <dl class="dl-horizontal">
+        
         <dt>
-            @Html.DisplayNameFor(model => model.photo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.photo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.first_name)
+            First Name
         </dt>
 
         <dd>
@@ -27,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.last_name)
+            Last Name
         </dt>
 
         <dd>
@@ -35,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+           Email
         </dt>
 
         <dd>
@@ -43,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.username)
+            Username
         </dt>
 
         <dd>
@@ -51,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.hash)
+            Password
         </dt>
 
         <dd>
@@ -59,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.permissions)
+            Role
         </dt>
 
         <dd>
@@ -67,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.total_hours)
+            Total Hours
         </dt>
 
         <dd>
@@ -75,7 +68,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.current_hours)
+            Current Hours
         </dt>
 
         <dd>
@@ -83,7 +76,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.rest_start)
+            Rest Start
         </dt>
 
         <dd>
@@ -91,7 +84,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.availability)
+            Availability
         </dt>
 
         <dd>
