--- a/SkedPortal/Views/Account/Login.cshtml
+++ b/SkedPortal/Views/Account/Login.cshtml
@@ -9,14 +9,14 @@
             <hr />
             <h4>@ViewBag.Error</h4>
             <div class="form-group">
-                @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class = "control-label col-md-2" >Username</label>
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger", @type = "email" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(model => model.hash, htmlAttributes: new { @class = "control-label col-md-2" })
+                <label class = "control-label col-md-2" >Password</label>
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.hash, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
                     @Html.ValidationMessageFor(model => model.hash, "", new { @class = "text-danger" })
