--- a/SkedPortal/Views/Flights/Create.cshtml
+++ b/SkedPortal/Views/Flights/Create.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>Create</h2>
-
+<h4>@ViewBag.Flight_Error</h4>
 
 @using (Html.BeginForm()) 
 {
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_number, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class = "control-label col-md-2"> Flight Number</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.flight_number, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.flight_number, "", new { @class = "text-danger" })
@@ -24,15 +24,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Date</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.flight_date, new { htmlAttributes = new { @class = "form-control", @type = "date" } })
                 @Html.ValidationMessageFor(model => model.flight_date, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_origin, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Origin</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.flight_origin, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.flight_origin, "", new { @class = "text-danger" })
@@ -40,15 +40,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_start, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Start</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_start, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="time" name ="flight_start" class="form-control" required placeholder=@DateTime.Now.TimeOfDay />
                 @Html.ValidationMessageFor(model => model.flight_start, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_destination, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Destination</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.flight_destination, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.flight_destination, "", new { @class = "text-danger" })
@@ -56,33 +56,12 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_end, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight End</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_end, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="time" name ="flight_end" class="form-control" required placeholder=@DateTime.Now.TimeOfDay />
                 @Html.ValidationMessageFor(model => model.flight_end, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.assigned, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.assigned)
-                    @Html.ValidationMessageFor(model => model.assigned, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.completed, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.completed)
-                    @Html.ValidationMessageFor(model => model.completed, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -90,7 +69,6 @@
         </div>
     </div>
 }
-
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
