--- a/SkedPortal/Views/Flights/Edit.cshtml
+++ b/SkedPortal/Views/Flights/Edit.cshtml
@@ -5,7 +5,8 @@
 }
 
 <h2>Edit</h2>
-
+<h4>@ViewBag.Error</h4>
+<h4>@ViewBag.Flight_Error</h4>
 
 @using (Html.BeginForm())
 {
@@ -18,7 +19,7 @@
         @Html.HiddenFor(model => model.id)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_number, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Number</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.flight_number, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.flight_number, "", new { @class = "text-danger" })
@@ -26,15 +27,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_date, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Date</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_date, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.flight_date, new { htmlAttributes = new { @class = "form-control"} })
                 @Html.ValidationMessageFor(model => model.flight_date, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_origin, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Origin</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.flight_origin, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.flight_origin, "", new { @class = "text-danger" })
@@ -42,15 +43,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_start, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Start</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_start, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="time" name ="flight_start" class="form-control" required value="@ViewBag.Model.flight_start" />
                 @Html.ValidationMessageFor(model => model.flight_start, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_destination, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight Destination</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.flight_destination, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.flight_destination, "", new { @class = "text-danger" })
@@ -58,15 +59,15 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.flight_end, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Flight End</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_end, new { htmlAttributes = new { @class = "form-control" } })
+                <input type="time" name ="flight_end" class="form-control" required value="@ViewBag.Model.flight_end" />
                 @Html.ValidationMessageFor(model => model.flight_end, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.assigned, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Assigned</label>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.assigned)
@@ -76,7 +77,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.completed, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2"> Completed</label>
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.completed)
