--- a/SkedPortal/Views/AssignedFlights/Delete.cshtml
+++ b/SkedPortal/Views/AssignedFlights/Delete.cshtml
@@ -12,7 +12,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.flight_number)
+            Flight Number
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.flight_date)
+            Flight Date
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.captain)
+            Captain
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.first_officer)
+            First Officer
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fal)
+            FAl
         </dt>
 
         <dd>
@@ -52,7 +52,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fa1)
+            FA1
         </dt>
 
         <dd>
@@ -60,7 +60,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fa2)
+            FA2
         </dt>
 
         <dd>
@@ -68,7 +68,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fa3)
+            FA3
         </dt>
 
         <dd>
@@ -76,7 +76,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fa4)
+            FA4
         </dt>
 
         <dd>
@@ -84,13 +84,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.fa5)
+            FA5
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.fa5)
         </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
