--- a/SkedPortal/Views/AssignedFlights/Index.cshtml
+++ b/SkedPortal/Views/AssignedFlights/Index.cshtml
@@ -12,34 +12,34 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.flight_number)
+            Flight Number
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.flight_date)
+            Flight Date
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.captain)
+           Captain
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.first_officer)
+            First Officer
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fal)
+            FAl
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fa1)
+            FA1
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fa2)
+            FA2
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fa3)
+            FA3
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fa4)
+            FA4
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.fa5)
+            FA5
         </th>
         <th></th>
     </tr>
