--- a/SkedPortal/Views/AssignedFlights/Create.cshtml
+++ b/SkedPortal/Views/AssignedFlights/Create.cshtml
@@ -15,6 +15,9 @@
         <h4>AssignedFlight</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div>
+            <input hidden type="text" name="flight_id" value="@ViewBag.FId"/>
+        </div>
         <div class="form-group">
             <label class="control-label col-md-2"> Flight Number</label>
             <div class="col-md-10">
