--- a/SkedPortal/Views/Shared/_Layout.cshtml
+++ b/SkedPortal/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                                 <li>@Html.ActionLink("Employees", "Index", "Users")</li>
                                 <li>@Html.ActionLink("Flights", "Index", "Flights")</li>
                                 <li>@Html.ActionLink("Assigned Flights", "Index", "AssignedFlights")</li>
-                                <li>@Html.ActionLink("Current Flights", "Current_Flights", "Dashboard")</li>
-                                <li>@Html.ActionLink("Completed Flights", "Completed_Flights", "Dashboard")</li>
+                                <li>@Html.ActionLink("Current Flights", "Current_Flights", "Flights")</li>
+                                <li>@Html.ActionLink("Completed Flights", "Completed_Flights", "Flights")</li>
                         }
 
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
