--- a/SkedPortal/Views/Flights/Edit.cshtml
+++ b/SkedPortal/Views/Flights/Edit.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             <label class="control-label col-md-2"> Flight Date</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.flight_date, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.EditorFor(model => model.flight_date, new { htmlAttributes = new { @class = "form-control", @type="date"} })
                 @Html.ValidationMessageFor(model => model.flight_date, "", new { @class = "text-danger" })
             </div>
         </div>
