--- a/SkedPortal/Views/Shared/_Layout.cshtml
+++ b/SkedPortal/Views/Shared/_Layout.cshtml
@@ -35,7 +35,10 @@
                                 <li>@Html.ActionLink("Current Flights", "Current_Flights", "Flights")</li>
                                 <li>@Html.ActionLink("Completed Flights", "Completed_Flights", "Flights")</li>
                         }
-
+                        else if (User.IsInRole("Pilot"))
+                        {
+                            <li>@Html.ActionLink("Current Flights", "Current_Flights", "Flights")</li>
+                        }
                         <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                         <li>@Html.ActionLink("Welcome: " + User.Identity.Name, "", "")</li>
                     }
